package server.protobuf.messages;

import "FlightsMessage.proto";

message CrunchStateSnapshotMessage {
    repeated FlightWithSplitsMessage flightWithSplits = 1;
    repeated TerminalLoadMessage terminalLoad = 2;
    repeated TerminalCrunchMessage terminalCrunch = 3;
    optional int64 crunchFirstMinuteTimestamp = 4;
}

message FlightWithSplitsMessage {
    optional FlightMessage flight = 1;
    repeated SplitMessage splits = 2;
}

message SplitMessage {
    repeated PaxTypeAndQueueCountMessage paxTypeAndQueueCount = 1;
    optional string source = 2;
    optional string style = 3;
}

message PaxTypeAndQueueCountMessage {
    optional string paxType = 1;
    optional string queueType = 2;
    optional double paxValue = 3;
}

message TerminalLoadMessage {
    optional string terminalName = 1;
    repeated QueueLoadMessage queueLoad =2;
}

message QueueLoadMessage {
    optional string queueName =1;
    repeated LoadMessage load =2;
}

message LoadMessage {
    optional int64 timestamp = 1;
    optional double pax = 2;
    optional double work = 3;
}

message TerminalCrunchMessage {
    optional string terminalName = 1;
    repeated QueueCrunchMessage queueCrunch = 2;
}

message QueueCrunchMessage {
    optional string queueName = 1;
    optional CrunchMessage crunch = 2;
}

message CrunchMessage {
    repeated int32 desks = 1;
    repeated int32 waitTimes = 2;
}


